Set JDK version
Signed-off-by: liec0dez <flarefps@gmail.com>